--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "14"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
        "14"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,11 +300,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#How many types of each pet are there?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 11 cats\n",
+      "There are 3 dogs\n",
+      "There are 4 horses\n"
+     ]
+    }
+   ],
+   "source": [
+    "horses = []\n",
+    "dogs = []\n",
+    "cats = []\n",
+    "for student in students:\n",
+    "    pets = student ['pets']\n",
+    "    for species in pets:\n",
+    "        pet_species = species['species']\n",
+    "        if pet_species == 'horse':\n",
+    "            horses.append(pet_species)\n",
+    "        if pet_species == 'dog':\n",
+    "            dogs.append(pet_species)\n",
+    "        if pet_species == 'cat':\n",
+    "            cats.append(pet_species)\n",
+    "print(f'There are {len(cats)} cats')\n",
+    "print(f'There are {len(dogs)} dogs')\n",
+    "print(f'There are {len(horses)} horses')"
    ]
   },
   {
