--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -293,13 +293,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -340,13 +333,6 @@
     "print(f'There are {len(dogs)} dogs')\n",
     "print(f'There are {len(horses)} horses')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -406,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,10 +401,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ada Lovelace 78.5\n",
+      "Thomas Bayes 83.5\n",
+      "Marie Curie 73.25\n",
+      "Grace Hopper 78.5\n",
+      "Alan Turing 81.5\n",
+      "Rosalind Franklin 80.75\n",
+      "Elizabeth Blackwell 84.5\n",
+      "Rene Descartes 88.75\n",
+      "Ahmed Zewail 88.75\n",
+      "Chien-Shiung Wu 82.5\n",
+      "William Sanford Nye 81.5\n",
+      "Carl Sagan 91.0\n",
+      "Jane Goodall 79.0\n",
+      "Richard Feynman 89.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for student in students:\n",
+    "    print(student['student'], sum(student['grades']) / len(student['grades']))"
+   ]
   },
   {
    "cell_type": "code",
